force-app/main/default/objects/SAP__mdt/fields/CompanyDB__c.field-meta.xml
<CustomField>
    <fullName>CompanyDB__c</fullName>
    <label>CompanyDB</label>
    <length>50</length>
    <type>Text</type>
</CustomField>