force-app/main/default/objects/SAP__mdt/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <label>Content_Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>