force-app/main/default/objects/SAP__mdt/fields/InventoryParams__c.field-meta.xml
<CustomField>
    <fullName>InventoryParams__c</fullName>
    <label>InventoryParams</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>